--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boids</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
+    <div class="wrapper">
+        <div id="settings-btn" class="box settings"><img src="options.svg" class="gear-svg"></div>
+        <div id="settings-menu" class="box settings-menu hidden">
+            <div class="slider-wrapper">
+                <p class="slider-text">Boid Count</p>
+                <div class="slider">
+                    <div data-prop="boid-count" class="slider-ball"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="ui.js"></script>
     <script type="module" src="index.js"></script>
 </body>
+
 </html>
